kubernetes-2do-parcial/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istea-ingress
  namespace: k8space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prueba.istea.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pgadmin-service
              port:
                number: 80
